--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Calculator</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="Calculator.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="wrapper" class="wrapper">
@@ -41,5 +41,5 @@
             </div>
         </div>
     </body>
-    <script src="Calculator.js"></script>
+    <script src="Scripts.js"></script>
 </html>
