--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div class="input" data-input>0</div>
             </div>
             <div id="container3" class="container3">
+                <button id="clear" class="button AC" data-Clear></button>
                 <button id="AC" class="button AC" data-AC>AC</button>
                 <button id="doidau" class="button" data-doidau>+/-</button>
                 <button id="percent" class="button" data-persent>%</button>
